feat: конфигурация swagger для фичи users
